[project]
name = "tektronixsg"
description = "Interface for Tektronix signal generators."
dynamic = ["version"]
readme = "README.rst"
authors = [
    {name = "Kevin Koch", email = "kevink2@mail.uni-paderborn.de"},
]
requires-python = ">=3"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyvisa",
    "pyvisa-py; sys_platform=='linux'",
    "pyusb; sys_platform=='linux'",
]

[project.optional-dependencies]
doc = [
    "setuptools_scm",
    "sphinx",
    "sphinx-rtd-theme",
]
test = [
    "pytest",
]

[project.urls]
homepage = "https://github.com/emtpb/tektronixsg/"

[build-system]
requires = ["setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]
